tests/error/linear_errors/enum_copy_nested1.err
Error: Copy violation (at $FILE:24:11)
   | 
22 |     t = s
23 |     use(t)
24 |     return s
   |            ^ Variable `s` with non-copyable type `MyEnum1` cannot be
   |              returned ...

Note:
   | 
21 | def foo(s: MyEnum1 @owned) -> MyEnum1:
22 |     t = s
   |         - Variable `s` already moved here

Guppy compilation failed due to 1 previous error
